# learning_gl

./: .gitignore  BitEngine.deps.json  Cargo.toml  scene-graph.json  scene1.json.scene
assets/meshes/: boulder_01.gltf  cube.fbx  sample.fbx
assets/scenes/: sample.json
assets/scenes/sample_scene/: cameras.json
assets/scripts/: CameraController.lua  Entity.lua  application.lua  camera-controller.lua  delete.lua  input.lua  light-rotater.lua  readonly.lua  sample.lua  script.lua  setaddress.lua  transform.lua  vector.lua
assets/scripts/api/: application.lua  entity.lua  gameobject.lua  input.lua  other.lua  transform.lua  vector.lua
russimp/: Cargo.toml
russimp/src/: lib.rs  scene.rs
scenes/: scene1.json
scenes/sample_scene/: cameras.json  entities.json  lights.json  meshes.json  scripts.json  transforms.json
scenes/scene1/: entities.json  transforms.json
scenes/scene1/assets/: meshes.json
scenes/scene1/components/: entities.json  staticmeshes.json  transforms.json
src/: application.rs  asset_loader.rs  asset_manager.rs  camera.rs  camera_controller.rs  data3d.rs  data_3d.rs  data_structures.rs  engine.rs  entity.rs  entity_sys.rs  entity_system.rs  gl_wrappers.rs  idea2.rs  initializers.rs  input.rs  lighting.rs  linear.rs  main.rs  material.rs  meterial.rs  object.rs  renderer.rs  renderers.rs  rendering.rs  resources.rs  runtime.rs  scene.rs  scripting.rs  serializable.rs  shader.rs  shader_program.rs  shaders_src.rs  some_idea.rs  static_runtime.rs  temp.rs  texture.rs  updaters.rs  updates.rs  util.rs  (+4 more)
src/scripts/: load-scene.lua
src/shaders/: 3d-model.vert  3dmodel.frag  3dmodel.vert  basic.frag  basic.vert  color-grade.frag  color-scale.frag  diffuse_shader.vert  directional-light.frag  directional-monocolor.frag  frag_mono_color.frag  frag_shdr.frag  lighting.frag  main.frag  main.vert  outline.frag  pbr.frag  phong-directional.frag  phong_directional.frag  phong_shader.frag  phong_shader.vert  screen.frag  screen.vert  shadow-mapping.vert  test.frag  test.vert  texture-rendering.frag  texture-rendering.vert  trivial_shader.frag  trivial_shader.vert  vert_shdr.vert  vert_with_color.vert
