[package]
name = "learning_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
gl_loader = "0.1.2"
nalgebra-glm = "0.18.0"
glfw = "0.51.0"
strum = { version = "0.25.0", features = ["derive"] }
russimp = { version = "2.0.6", features = ["prebuilt"] }
stb_image_rust = "2.27.2"
rlua = "0.19.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
fxhash = "0.2.1"
memoffset = "0.9.0"

# spin_sleep = "1.1.1"
# rayon = "1.7.0"

[profile.release]
panic = "abort"
